# samples

./: .gitignore  CONTRIBUTORS.md  README.md  requirements.txt
01-getting-started/: README.md
01-getting-started/00-first-agent/: getting-started-with-strands-agents.ipynb
01-getting-started/01-connecting-with-aws-services/: creating-example.ipynb
01-getting-started/02-integration-mcp-tools/: mcp-agent.ipynb
01-getting-started/03-openai-model/: openai-mcp-agent.ipynb  requirements.txt
01-getting-started/04-ollama-model/: ollama_file_ops_agent.ipynb  requirements.txt
01-getting-started/05-streaming-agent-response/: streaming.ipynb
01-getting-started/06-guardrail-integration/: customer_profile_tools.py  guardrails_demo.ipynb
01-getting-started/07-agent-as-tool/: agent-as-tools.ipynb
01-getting-started/08-swarm-agent/: swarm.ipynb
01-getting-started/15-a2a/: .gitignore  (+3 more)
01-tutorials/: README.md
02-samples/: README.md
02-samples/02-scrum-master-assistant/: .env.example  README.md  jira_assistant.py  pyproject.toml  sample_sprint_meeting_notes.txt
02-samples/02-scrum-master-assistant/utils/: jira_tools.py  prompts.py
02-samples/03-aws-assistant-mcp/: .env.example  .gitignore  README.md  aws_cost_assistant.py  aws_documentation_researcher.py  graph_creater.py  main.py  pyproject.toml
03-integrations/: README.md
03-integrations/tavily/interactive_cli/: .env.example  .gitignore  README.md  deep_research.py  pyproject.toml
03-integrations/tavily/interactive_cli/utils/: prompts.py  utils.py
04-UX-demos/: README.md
05-agentic-rag/: README.md
(+290 files in other folders)
