[project]
name = "02-scrum-master-assistant"
version = "0.1.0"
description = "An expert agile development assistant for JIRA specializing in breaking down meeting notes into actionable tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "python-dotenv>=1.1.0",
    "strands-agents>=0.1.3",
    "strands-agents-tools>=0.1.2",
]
