[project]
name = "tavily-deep-researcher"
version = "0.1.0"
description = "A Python package for interactive research using Tavily's Websearch capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "strands-agents>=0.1.3",
    "strands-agents-tools>=0.1.2",
    "tavily-python>=0.7.2",
]